# openV

./: .gitignore  CODE_AUDIT_REPORT.md  Dockerfile  Dockerfile.optimized  Makefile  README.md  docker-compose.yml  docker-daemen.json  docker-daemon.json  environment.yml  main.py  mcp_config.json  mcp_server.py  prd.md  pyproject.toml  review.md
.agent/skills/: build-image.md  cocotb-test.md  lint.md  openV  run-container.md  synthesis.md  verify-tools.md
.agent/workflows/: assemble.md  audit.md  fix-unit.md  plan.md  unit.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py
backend/app/routers/: auth.py  chat.py  projects.py  terminal.py  vcd.py
backend/app/services/: ai_agent.py  cleanup_service.py  container_manager.py  simulation_service.py
backend/tests/: conftest.py  test_api.py
backend/tests/functional/: test_auth.py  test_pipeline.py  test_projects.py  test_stats.py  test_terminal.py
backend/tests/integration/: test_container_integration.py  test_full_lifecycle.py
backend/tests/unit/: test_container_manager.py
docs/: architecture_cn.md  user_guide_cn.md
docs/backend/: README.md  api_spec.md  introduction.md
docs/webui/: README.md  api_reference.md  introduction.md
frontend/: .env.example  Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx  authStore.ts  index.css  store.ts
frontend/src/components/: AgentChat.tsx  Auth.tsx  CodeEditor.tsx  CommandPalette.tsx  (+5 more)
plans/: ui.md  ui_implementation.md
refactor/: mcp.md  prd.md  slash.md
src/openv/: __init__.py
